--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,7 @@ jobs:
           dependencies/arkhelper.exe dir2ark _ark _build/ps3/USRDIR/gen -n "patch_ps3" -e -v 5 -s 4073741823
       - name: Build PKG
         run: |
+          del /f "_build\ps3\USRDIR\EBOOT.BIN"
           move "dependencies\eu_eboot\EBOOT.BIN" "_build\ps3\USRDIR"
           move "dependencies\ta_pkg_repacker_tools\eur\PARAM.SFO" "_build\ps3"
           $sha_short="$(git rev-parse --short HEAD)".ToUpper()
