--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           move "dependencies\ta_pkg_repacker_tools\usa\PARAM.SFO" "_build\ps3"
           $sha_short="$(git rev-parse --short HEAD)".ToUpper()
           $content="UP0006-BLUS30382_00-LRBULTIMA"
-          dependencies/ta_pkg_repacker_tools/make_package_npdrm_retail.exe --k-licensee 0x00000000000000000000000000000000 --drm-type Local --package-version $packageversion --content-type GameData --content-id ($content + $sha_short) dependencies/ta_pkg_repacker_tools/usa/package.conf _build/ps3
+          dependencies/ta_pkg_repacker_tools/make_package_npdrm_retail.exe --k-licensee 0x00000000000000000000000000000000 --drm-type Local --content-type GameData --content-id ($content + $sha_short) dependencies/ta_pkg_repacker_tools/usa/package.conf _build/ps3
 
       - name: Upload result
         uses: actions/upload-artifact@v4
@@ -85,7 +85,7 @@ jobs:
           move "dependencies\ta_pkg_repacker_tools\eur\PARAM.SFO" "_build\ps3"
           $sha_short="$(git rev-parse --short HEAD)".ToUpper()
           $content="UP0006-BLES00636_00-LRBULTIMA"
-          dependencies/ta_pkg_repacker_tools/make_package_npdrm_retail.exe --k-licensee 0x00000000000000000000000000000000 --drm-type Local --package-version $packageversion --content-type GameData --content-id ($content + $sha_short) dependencies/ta_pkg_repacker_tools/eur/package.conf _build/ps3
+          dependencies/ta_pkg_repacker_tools/make_package_npdrm_retail.exe --k-licensee 0x00000000000000000000000000000000 --drm-type Local --content-type GameData --content-id ($content + $sha_short) dependencies/ta_pkg_repacker_tools/eur/package.conf _build/ps3
 
       - name: Upload result
         uses: actions/upload-artifact@v4
