--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           chmod +x dependencies/linux/arkhelper
           chmod +x dependencies/linux/dtab
       - name: Replace LOCALBUILD with commit SHA in locale
-        run: sed -i "s/LOCALBUILD/$(git rev-parse --short HEAD)/g" _ark/ulti/locale_mod.dta
+        run: sed -i "s/LOCALBUILD/$(git rev-parse --short HEAD)/g" _ark/ulti/mod_version.dta
       - name: Remove PS3 and Wii files
         run: |
           find . -name "*.*_ps3" -type f -delete
@@ -45,7 +45,7 @@ jobs:
       - name: Replace LOCALBUILD with commit SHA in locale
         run: |
           $sha = git rev-parse --short HEAD
-          (Get-Content _ark/ulti/locale_mod.dta) -replace 'LOCALBUILD', $sha | Set-Content _ark/ulti/locale_mod.dta
+          (Get-Content _ark/ulti/mod_version.dta) -replace 'LOCALBUILD', $sha | Set-Content _ark/ulti/mod_version.dta
       - name: Remove Xbox and Wii files
         run: |
           Get-ChildItem _ark/ -recurse -include *.*_xbox | remove-item
@@ -77,7 +77,7 @@ jobs:
       - name: Replace LOCALBUILD with commit SHA in locale
         run: |
           $sha = git rev-parse --short HEAD
-          (Get-Content _ark/ulti/locale_mod.dta) -replace 'LOCALBUILD', $sha | Set-Content _ark/ulti/locale_mod.dta
+          (Get-Content _ark/ulti/mod_version.dta) -replace 'LOCALBUILD', $sha | Set-Content _ark/ulti/mod_version.dta
       - name: Remove Xbox and Wii files
         run: |
           Get-ChildItem _ark/ -recurse -include *.*_xbox | remove-item
@@ -120,7 +120,7 @@ jobs:
           truncate -s 1994575183 dependencies/riivolution-patch/lrbul/main_wii_0.ark
           truncate -s 1595018582 dependencies/riivolution-patch/lrbul/main_wii_1.ark
       - name: Replace LOCALBUILD with commit SHA in locale
-        run: sed -i "s/LOCALBUILD/$(git rev-parse --short HEAD)/g" _ark/ulti/locale_mod.dta
+        run: sed -i "s/LOCALBUILD/$(git rev-parse --short HEAD)/g" _ark/ulti/mod_version.dta
       - name: Remove Xbox and PS3 files
         run: |
           find . -name "*.*_xbox" -type f -delete
@@ -159,7 +159,7 @@ jobs:
           chmod +x dependencies/linux/arkhelper
           chmod +x dependencies/linux/dtab
       - name: Replace LOCALBUILD with commit SHA in locale
-        run: sed -i "s/LOCALBUILD/$(git rev-parse --short HEAD)/g" _ark/ulti/locale_mod.dta
+        run: sed -i "s/LOCALBUILD/$(git rev-parse --short HEAD)/g" _ark/ulti/mod_version.dta
       - name: Remove Xbox and PS3 files
         run: |
           find . -name "*.*_xbox" -type f -delete
